# Signal-Pulse

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.en.md  README.md  index.html  pyproject.toml  report.json  requirements.txt  signal_history.csv  signals_daily.csv
.github/workflows/: daily.yml  manual.yml
config/: benchmarks.yml  github_actions.yml  thresholds.yml  watchlist.yml
docs/: README.en.md  signals.md
src/my_watchlist_signal_bot/: __init__.py  __main__.py  main.py  pipeline.py  settings.py  universe.py
src/my_watchlist_signal_bot/fetchers/: __init__.py  base.py  fdr_fetcher.py  pykrx_fetcher.py  yfinance_fetcher.py
src/my_watchlist_signal_bot/indicators/: __init__.py  momentum.py  trend.py  volatility.py
src/my_watchlist_signal_bot/normalize/: __init__.py
src/my_watchlist_signal_bot/reports/: __init__.py  html.py  telegram.py
src/my_watchlist_signal_bot/signals/: __init__.py  classifier.py  rules.py  scoring.py
src/my_watchlist_signal_bot/storage/: __init__.py  history.py  parquet_store.py
src/watchlist_signal_bot/: __init__.py  __main__.py  github_actions.py  main.py  models.py  pipeline.py  settings.py  universe.py
src/watchlist_signal_bot/fetchers/: __init__.py  base.py  fdr_fetcher.py  pykrx_fetcher.py  yfinance_fetcher.py
src/watchlist_signal_bot/indicators/: __init__.py  momentum.py  trend.py  volume.py
src/watchlist_signal_bot/normalize/: __init__.py  ohlcv.py
tests/: test_github_actions.py  test_html.py  test_indicators.py  test_pipeline.py  test_signals.py  test_telegram.py
(+14 files in other folders)
